--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,5 +3,11 @@
   "compatibility_date": "2024-06-01",
   "assets": {
     "directory": "."
-  }
+  },
+  "r2_buckets": [
+    {
+      "binding": "BUCKET",
+      "bucket_name": "img"
+    }
+  ]
 }
