--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,7 @@
 {
   "name": "cf-labroom",
   "compatibility_date": "2024-06-01",
+  "main": "_worker.js",
   "assets": {
     "directory": "."
   },
