--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,5 +10,12 @@
       "binding": "BUCKET",
       "bucket_name": "img"
     }
+  ],
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_id": "ccfa1e31-9800-4439-991e-a838b732408c",
+      "database_name": "d1-sql"
+    }
   ]
 }
