--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -17,5 +17,20 @@
       "database_id": "ccfa1e31-9800-4439-991e-a838b732408c",
       "database_name": "d1-sql"
     }
+  ],
+  "observability": {
+    "enabled": false,
+    "head_sampling_rate": 1,
+    "logs": {
+      "enabled": true,
+      "head_sampling_rate": 1,
+      "persist": true,
+      "invocation_logs": true
+    },
+    "traces": {
+      "enabled": false,
+      "persist": true,
+      "head_sampling_rate": 1
+    }
   ]
 }
